--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,5 @@
     text-align: center;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    font-size: 200%;
 }
